# esat_hub

./: .env.example  README.md  docker-compose.yml  index.html
backend/: .coverage  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01fcde4d8364_ajout_de_champ_à_la_table_user.py  065f7b7e8ca3_make_fields_nullable.py  09c91926ba27_add_cascade_delete_to_notifications.py  0f1421ce58cc_ajout_de_la_table_user_device.py  0f4d86e093d2_add_table_revoked_token.py  139f29cdb907_ajout_de_la_table_media.py  169852c8808c_add_is_read_to_messages.py  2eac1e9e28d9_ajout_de_la_table_room_et_ses_relations.py  30ddc752cbe5_ajout_de_la_table_notification.py  3c57794a3078_suppression_en_cascade_pour_les_.py  440ea534b844_initial_migration.py  5133a849ad83_ajout_de_champs_a_la_table_user.py  51d7221eb299_create_messages_table.py  55520eccba17_ajout_de_relation_pour_les_réponses_de_.py  642a37b4f980_initial_commit.py  76d0103e397f_add_avatar_path_to_users.py  7e2a175ac8c8_ajout_de_la_table_message.py  95833e651070_edit_card_number_type_on_table_user.py  a2a78a28e281_ajout_de_plus_d_option_pour_les_.py  a4197bac8d98_ajout_des_relations_des_posts_et_.py  a4cd265ef188_ajout_d_un_champ_status_a_la_table_post.py  b0f36fd0a54a_initial_layout_with_uuid.py  b2856207516d_ajout_du_modèle_pour_la_revocation_des_.py  bf83c8279743_create_revoked_tokens_table.py  (+4 more)
backend/app/: dependencies.py  initial_data.py  main.py
backend/scripts/: start_backend.sh
backend/tests/: conftest.py  conftests.py  test_db.py  utils.py
(+252 files in other folders)
