[project]
name = "esat_hub-backend"
version = "0.1.0"
description = "API backend exposant les endpoints nécessaires et gérant la logique métier de l’application."
authors = [
    {name = "tresor-del",email = "tresoradzanto7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pyproject-toml (>=0.1.0,<0.2.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
